# PROJECT31.10.2021

PROJECT31.10.2021/: CMakeLists.txt
PROJECT31.10.2021/matrixApp/: interface.cpp  interface.h  main.cpp
PROJECT31.10.2021/matrixLib/: libraryA.cpp  libraryA.h
matrixApp/: interface.cpp  interface.h  main.cpp
matrixLib/: CMakeLists.txt  libraryA.cpp  libraryA.h
